# PixelAppByVeneris

./: README.md
src/: app.js  drag.js  index.html  preloader.js  style.css  tauri.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  tmp07kgbd  tmp1jb0el  tmp31ab72  tmp3erhde  tmp546xsr  tmp5rg2r1  tmp5y7tig  tmp66f9o0  tmp7zm_v4  tmp_hswr2  tmpb4fmlr  tmpbzw_mk  tmpd0npey  tmpdmgw8u  tmperhkuo  tmpfn0yk_  tmpfw287e  tmpg0axt1  tmpg0n2a8  tmpgb8ny0  tmphopdvg  tmphrj1xz  tmpit0u9k  tmpj333aa  tmpjbrp4j  tmpljfknc  tmpm0c839  tmpmiu36v  tmpnalq28  tmpngyhma  tmpob59m5  tmpobduce  tmpqge8gc  tmprt7krw  tmpt7sfh1  tmpto25if  tmpuphdbo  tmpv6vyud  tmpx4cqmu  (+1 more)
