[package]
name = "pixel_app_by_veneris"
version = "0.0.0"
description = "Program for painting"
authors = ["Veneris Asgard"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
